test/lattests/good/core035.lat
int main() {
    int n = 100;
    int i = 0;

    while (i < n) {
        int x = i % 32;
        printInt(x);
        i++;
    }

    return 0;
}