test/lattests/bad/parameterOfVoidType.lat
void foo (void a) {
}

int main() { return 0; }